openwrt config upd

--- a/.github/workflows/openwrt-SNAPSHOT-mt76.yml
+++ b/.github/workflows/openwrt-SNAPSHOT-mt76.yml
@@ -10,7 +10,7 @@ env:
   REPO_URL: https://github.com/pesa1234/openwrt.git
   REPO_BRANCH: next-r4.6.2.rss.mtk
   OpenWRTDevice: Flint2_GL-MT6000
-  CONFIG_FILE: config.openwrt-custom-master
+  CONFIG_FILE: config.openwrt-snapshot-pesa1234
   TZ: Europe/Kyiv
 
 jobs:
