--- a/.github/workflows/openwrt-SNAPSHOT-mt76.yml
+++ b/.github/workflows/openwrt-SNAPSHOT-mt76.yml
@@ -147,7 +147,7 @@ jobs:
       - name: Deploy and archive packages
         run: |
           ls openwrt/bin/*/targets/*/*
-          cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic
+          cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic;
 
           if [ -d "packages" ]; then
             echo "Found packages directory, processing..."
@@ -159,7 +159,7 @@ jobs:
             git config --global user.name 'OpenWRT Build Bot'
             git config --global user.email 'actions@github.com'
 
-            cd $GITHUB_WORKSPACE
+            cd $GITHUB_WORKSPACE;
 
             # Create versioned directory name
             PACKAGES_DIR_NAME="${DATE}_openwrt_${VERSION_CODE}_${OpenWRT_VERSION}-kernel-${KERNEL_VERSION}"
@@ -204,7 +204,7 @@ jobs:
             fi
 
             # Create archive
-            cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic
+            cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic;
             PACKAGES_ARCHIVE="openwrt-packages-${DATE}-v${OpenWRT_VERSION}-k${KERNEL_VERSION}.tar.gz"
             tar -czf "$PACKAGES_ARCHIVE" packages/
 
@@ -223,7 +223,7 @@ jobs:
       - name: Organize files
         id: organize
         run: |
-          cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic
+          cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic;
           rm -rf packages
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "NOW=$(date +%F-%H%M)" >> $GITHUB_ENV
