--- a/.github/workflows/immortalwrt-24.10-mt_wifi.yml
+++ b/.github/workflows/immortalwrt-24.10-mt_wifi.yml
@@ -87,7 +87,7 @@ jobs:
 
       - name: Configure Firmware
         run: |
-          cp 903-fix-nft-reject-bridge.patch immortalwrt-mt798x-24.10/target/linux/generic/backport-5.4
+          #cp 903-fix-nft-reject-bridge.patch immortalwrt-mt798x-24.10/target/linux/generic/backport-5.4
           cp $CONFIG_FILE immortalwrt-mt798x-24.10/.config
           cd immortalwrt-mt798x-24.10
           perl --version
