--- a/.github/workflows/immortalwrt-24.10-6.6-mt_wifi.yml
+++ b/.github/workflows/immortalwrt-24.10-6.6-mt_wifi.yml
@@ -4,10 +4,10 @@ on:
   workflow_dispatch:
 
 env:
-  REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-24.10.git
-  REPO_BRANCH: 2410
+  REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-6.6.git
+  REPO_BRANCH: openwrt-24.10-6.6
   ImmortalWRTDevice: Flint2_GL-MT6000
-  CONFIG_FILE: config.immortalwrt-2410-padavanonly
+  CONFIG_FILE: config.immortalwrt-2410-6.6-padavanonly
   TZ: Europe/Kyiv
 
 jobs:
@@ -87,7 +87,7 @@ jobs:
 
       - name: Configure Firmware
         run: |
-          cp 903-fix-nft-reject-bridge.patch immortalwrt-mt798x-24.10/target/linux/generic/backport-5.4
+          #cp 903-fix-nft-reject-bridge.patch immortalwrt-mt798x-24.10/target/linux/generic/backport-5.4
           cp $CONFIG_FILE immortalwrt-mt798x-24.10/.config
           cd immortalwrt-mt798x-24.10
           perl --version
@@ -105,15 +105,18 @@ jobs:
 
           # Extract kernel version from target configuration
           KERNEL_VERSION=""
-          KERNEL_VERSION=$(grep -m1 'KERNEL' target/linux/mediatek/Makefile | cut -d= -f2 | tr -d ' ')
 
           if [ -z "$KERNEL_VERSION" ]; then
-            KERNEL_VERSION=$(grep -m1 "LINUX_VERSION-" include/kernel-version.mk 2>/dev/null | cut -d= -f2 | tr -d ' ' | cut -d. -f1-2)
+            if grep 'HAS_TESTING_KERNEL=y' .config; then
+              KERNEL_VERSION=$(grep -m1 "KERNEL_TESTING_PATCHVER:" target/linux/mediatek/Makefile 2>/dev/null | cut -d= -f2 | tr -d ' ' | cut -d. -f1-2)
+            else
+              KERNEL_VERSION=$(grep -m1 "KERNEL_PATCHVER:" target/linux/mediatek/Makefile 2>/dev/null | cut -d= -f2 | tr -d ' ' | cut -d. -f1-2)
+            fi
           fi
 
           # Set default values if extraction fails
           IMMORTALWRT_VERSION=${IMMORTALWRT_VERSION:-"24.10-dev"}
-          KERNEL_VERSION=${KERNEL_VERSION:-"5.4"}
+          KERNEL_VERSION=${KERNEL_VERSION:-"6.6"}
 
           # Clean up version strings
           IMMORTALWRT_VERSION=$(echo "$IMMORTALWRT_VERSION" | sed 's/[^a-zA-Z0-9.-]//g')
@@ -144,10 +147,14 @@ jobs:
       - name: Create target deploy dirs
         run: |
           # Create versioned directory name
-          PACKAGES_DIR_NAME="${DATE}_immortalwrt_${VERSION_CODE}_${IMMORTALWRT_VERSION}-kernel-${KERNEL_VERSION}" >> $GITHUB_ENV
-          TARGET_PKG_DIR="$(grep '^CONFIG_TARGET_BOARD=' immortalwrt-mt798x-24.10/.config | cut -d= -f2 | tr -d '\"')/$(grep '^CONFIG_TARGET_SUBTARGET=' immortalwrt-mt798x-24.10/.config | cut -d= -f2 | tr -d '\"')" >> $GITHUB_ENV
-          PACKAGES_OUT="$PACKAGES_DIR_NAME/targets/$TARGET_PKG_DIR/packages" >> $GITHUB_ENV
-          mkdir -p "$PACKAGES_OUT"
+          PACKAGES_DIR_NAME="${DATE}_immortalwrt_${VERSION_CODE}_${IMMORTALWRT_VERSION}-kernel-${KERNEL_VERSION}"
+          TARGET_PKG_DIR="$(grep '^CONFIG_TARGET_BOARD=' immortalwrt-mt798x-24.10/.config | cut -d= -f2 | tr -d '\"')/$(grep '^CONFIG_TARGET_SUBTARGET=' openwrt/.config | cut -d= -f2 | tr -d '\"')"
+          PACKAGES_OUT="${PACKAGES_DIR_NAME}/targets/${TARGET_PKG_DIR}/packages"
+          mkdir -p "${PACKAGES_OUT}"
+
+          echo "PACKAGES_DIR_NAME=$PACKAGES_DIR_NAME" >> $GITHUB_ENV
+          echo "TARGET_PKG_DIR=$TARGET_PKG_DIR" >> $GITHUB_ENV
+          echo "PACKAGES_OUT=$PACKAGES_OUT" >> $GITHUB_ENV
 
       - name: Patch feeds.mk for custom package repository
         run: |
@@ -196,9 +203,11 @@ jobs:
             git config --global user.email 'actions@github.com'
 
             cd $GITHUB_WORKSPACE
+            rm -f packages-output-immortalwrt-2410-6.6-padavanonly
 
-            cp -r immortalwrt-mt798x-24.10/bin/targets/*/*/packages/* "$PACKAGES_OUT"
-            ln -sf "$PACKAGES_OUT" packages-output-immortalwrt-2410-padavanonly
+            cp -r immortalwrt-mt798x-24.10/bin/targets/*/*/packages/* "$PACKAGES_OUT" || true
+            ln -sf "$PACKAGES_OUT" packages-output-immortalwrt-2410-padavanonly || true
+            ls -l packages-output-immortalwrt-2410-6.6-padavanonly || true
 
             # Create README with version info
             cat > "$PACKAGES_DIR_NAME/README.md" << 'EOF'
@@ -234,7 +243,7 @@ jobs:
             git pull origin ${{ github.ref_name }} --rebase --autostash
 
             git add "$PACKAGES_DIR_NAME/"
-            git add packages-output-immortalwrt-2410-padavanonly
+            git add packages-output-immortalwrt-2410-6.6-padavanonly
 
             if ! git diff --staged --quiet; then
               git commit -m "Update packages ($PACKAGE_COUNT .ipk files) - ImmortalWRT ${IMMORTALWRT_VERSION} / Kernel ${KERNEL_VERSION}"
