--- a/.github/workflows/immortalwrt-24.10-6.6-mt_wifi.yml
+++ b/.github/workflows/immortalwrt-24.10-6.6-mt_wifi.yml
@@ -1,4 +1,4 @@
-name: ImmortalWRT 24.10 Firmware mt_wifi driver (padavanonly)
+name: ImmortalWRT 24.10 Linux 6.6 Firmware mt_wifi driver (padavanonly)
 
 on:
   workflow_dispatch:
