--- a/.github/workflows/immortalwrt-24.10-6.6-mt_wifi.yml
+++ b/.github/workflows/immortalwrt-24.10-6.6-mt_wifi.yml
@@ -206,7 +206,7 @@ jobs:
             rm -f packages-output-immortalwrt-2410-6.6-padavanonly
 
             cp -r immortalwrt-mt798x-24.10/bin/targets/*/*/packages/* "$PACKAGES_OUT" || true
-            ln -sf "$PACKAGES_OUT" packages-output-immortalwrt-2410-padavanonly || true
+            ln -sf "$PACKAGES_OUT" packages-output-immortalwrt-2410-6.6-padavanonly || true
             ls -l packages-output-immortalwrt-2410-6.6-padavanonly || true
 
             # Create README with version info
@@ -243,7 +243,7 @@ jobs:
             git pull origin ${{ github.ref_name }} --rebase --autostash
 
             git add "$PACKAGES_DIR_NAME/"
-            git add packages-output-immortalwrt-2410-6.6-padavanonly
+            git add packages-output-immortalwrt-2410-6.6-padavanonly || true
 
             if ! git diff --staged --quiet; then
               git commit -m "Update packages ($PACKAGE_COUNT .ipk files) - ImmortalWRT ${IMMORTALWRT_VERSION} / Kernel ${KERNEL_VERSION}"
